<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdicionarFilmeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0000FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/adicionar_filme"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#a9a9a9"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/et_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_titulo"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/et_realizador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/hint_realizador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/et_titulo"
        app:layout_constraintTop_toBottomOf="@+id/et_titulo" />

    <EditText
        android:id="@+id/et_tipo_filme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/hint_tipo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/et_realizador"
        app:layout_constraintTop_toBottomOf="@+id/et_realizador" />

    <EditText
        android:id="@+id/et_actor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_actor"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="@+id/et_tipo_filme"
        app:layout_constraintStart_toStartOf="@+id/et_tipo_filme"
        app:layout_constraintTop_toBottomOf="@+id/et_tipo_filme" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/et_actor"
        app:layout_constraintTop_toBottomOf="@+id/et_actor">

        <EditText
            android:id="@+id/et_duracao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:layout_weight="2"
            android:hint="@string/hint_duracao" />

        <EditText
            android:id="@+id/et_ano"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:hint="@string/hint_ano"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@+id/et_duracao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/et_duracao"
            app:layout_constraintTop_toTopOf="@+id/et_duracao" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_enviar"
        android:layout_width="50dp"
        android:padding="0dp"
        android:layout_height="50dp"
        android:text="@string/mais"
        android:textSize="20sp"
        android:layout_marginEnd="5dp"
        app:cornerRadius="100dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>