<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalhesFilmeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_det"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0000FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/tituloFilme"
        app:titleTextColor="@color/white" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="144dp"
        android:src="@drawable/filme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_det" />

    <TextView
        android:id="@+id/et_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/hint_titulo"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img" />

    <TextView
        android:id="@+id/et_realizador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:text="@string/hint_realizador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/et_titulo"
        app:layout_constraintTop_toBottomOf="@+id/et_titulo" />

    <TextView
        android:id="@+id/et_tipo_filme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:text="@string/hint_tipo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/et_realizador"
        app:layout_constraintTop_toBottomOf="@+id/et_realizador" />

    <TextView
        android:id="@+id/et_actor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/hint_actor"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="@+id/et_tipo_filme"
        app:layout_constraintStart_toStartOf="@+id/et_tipo_filme"
        app:layout_constraintTop_toBottomOf="@+id/et_tipo_filme" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/et_actor"
        app:layout_constraintTop_toBottomOf="@+id/et_actor">

        <TextView
            android:id="@+id/et_duracao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:layout_weight="2"
            android:text="@string/hint_duracao" />

        <TextView
            android:id="@+id/et_ano"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/hint_ano"
            app:layout_constraintBottom_toBottomOf="@+id/et_duracao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/et_duracao"
            app:layout_constraintTop_toTopOf="@+id/et_duracao" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>