<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:src="@drawable/filme"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/titulo"
        android:textColor="#FF0000"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img"
        app:layout_constraintTop_toTopOf="@+id/img" />

    <TextView
        android:id="@+id/tv_realizador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/realizador"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_titulo"
        app:layout_constraintStart_toStartOf="@+id/tv_titulo"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo" />

    <TextView
        android:id="@+id/tv_actor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/com"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_realizador"
        app:layout_constraintStart_toStartOf="@+id/tv_realizador"
        app:layout_constraintTop_toBottomOf="@+id/tv_realizador" />


    <TextView
        android:id="@+id/tv_duracao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/duracao"
        android:layout_marginStart="20dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/img"
        app:layout_constraintTop_toBottomOf="@+id/tv_actor" />

    <TextView
        android:id="@+id/tv_ano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/ano"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_duracao"
        app:layout_constraintTop_toBottomOf="@+id/tv_actor" />


</androidx.constraintlayout.widget.ConstraintLayout>